--- a/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
+      {{form.hidden_tag()}}
       <h3 class="form-heading">List a new artist</h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -22,16 +23,32 @@
       <div class="form-group">
           <label for="phone">Phone</label>
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
+      </div>
+      <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+        <label for="seeking_venue">Looking for Venue</label>
+        {{ form.seeking_venue(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="seeking_description">Venue Description</label>
+      {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="website">Website</label>
+      {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+    </div>
+      <div class="form-group">
+          <label for="facebook_link">Facebook Link</label>
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
