--- a/01_fyyur/starter_code/templates/forms/new_show.html
+++ b/01_fyyur/starter_code/templates/forms/new_show.html
@@ -3,7 +3,6 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
-      {{form.hidden_tag()}}
       <h3 class="form-heading">List a new show</h3>
       <div class="form-group">
         <label for="artist_id">Artist ID</label>
@@ -16,10 +15,11 @@
         {{ form.venue_id(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="start_time">Start Time</label>
-          {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
-        </div>
+        <label for="start_time">Start Time</label>
+        {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
+      </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+        {{ form.csrf_token() }}
     </form>
   </div>
 {% endblock %}
