--- a/01_fyyur/starter_code/templates/forms/new_venue.html
+++ b/01_fyyur/starter_code/templates/forms/new_venue.html
@@ -3,7 +3,6 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
-      {{form.hidden_tag()}}
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -54,6 +53,7 @@
         {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
       </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+        {{ form.csrf_token() }}
     </form>
   </div>
 {% endblock %}
