--- a/01_fyyur/starter_code/templates/pages/show_artist.html
+++ b/01_fyyur/starter_code/templates/pages/show_artist.html
@@ -3,9 +3,12 @@
 {% block content %}
 <div class="row">
 	<div class="col-sm-6">
-		<h1 class="monospace">
+		<h1 class="monospace" style="float:left; margin:0; padding:0.25rem;">
 			{{ artist.name }}
 		</h1>
+		<button type="button" class="edit-button btn btn-primary" data-id="{{ artist.id }}" style="margin-left:1rem; margin-right:1rem">
+			EDIT
+		</button>
 		<p class="subtitle">
 			ID: {{ artist.id }}
 		</p>
@@ -19,13 +22,15 @@
 		</p>
 		<p>
 			<i class="fas fa-phone-alt"></i> {% if artist.phone %}{{ artist.phone }}{% else %}No Phone{% endif %}
-        </p>
-        <p>
-			<i class="fas fa-link"></i> {% if artist.website %}<a href="{{ artist.website }}" target="_blank">{{ artist.website }}</a>{% else %}No Website{% endif %}
 		</p>
 		<p>
-			<i class="fab fa-facebook-f"></i> {% if artist.facebook_link %}<a href="{{ artist.facebook_link }}" target="_blank">{{ artist.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
-        </p>
+			<i class="fas fa-link"></i> {% if artist.website %}<a href="{{ artist.website }}"
+				target="_blank">{{ artist.website }}</a>{% else %}No Website{% endif %}
+		</p>
+		<p>
+			<i class="fab fa-facebook-f"></i> {% if artist.facebook_link %}<a href="{{ artist.facebook_link }}"
+				target="_blank">{{ artist.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
+		</p>
 		{% if artist.seeking_venue %}
 		<div class="seeking">
 			<p class="lead">Currently seeking performance venues</p>
@@ -33,7 +38,7 @@
 				<i class="fas fa-quote-left"></i> {{ artist.seeking_description }} <i class="fas fa-quote-right"></i>
 			</div>
 		</div>
-		{% else %}	
+		{% else %}
 		<p class="not-seeking">
 			<i class="fas fa-moon"></i> Not currently seeking performance venues
 		</p>
@@ -44,7 +49,8 @@
 	</div>
 </div>
 <section>
-	<h2 class="monospace">{{ artist.upcoming_shows_count }} Upcoming {% if artist.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ artist.upcoming_shows_count }} Upcoming
+		{% if artist.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
 		{%for show in artist.upcoming_shows %}
 		<div class="col-sm-4">
@@ -58,7 +64,8 @@
 	</div>
 </section>
 <section>
-	<h2 class="monospace">{{ artist.past_shows_count }} Past {% if artist.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ artist.past_shows_count }} Past
+		{% if artist.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
 		{%for show in artist.past_shows %}
 		<div class="col-sm-4">
@@ -71,6 +78,15 @@
 		{% endfor %}
 	</div>
 </section>
-
+<script>
+	const editBtn = document.querySelector('.edit-button');
+	editBtn.onclick = function (e) {
+		const id = e.target.dataset['id'];
+		fetch(`/artists/${id}/edit`, {
+			method: 'GET'
+		}).then(response => {
+        	window.location.href = `/artists/${id}/edit`;
+      })
+	}
+</script>
 {% endblock %}
-
