--- a/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -1,11 +1,20 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Venue Search{% endblock %}
 {% block content %}
+
 <div class="row">
 	<div class="col-sm-6">
-		<h1 class="monospace">
-			{{ venue.name }}
-		</h1>
+		<div>
+			<h1 class="monospace" style="float:left; margin:0; padding:0.25rem;">
+				{{ venue.name }}
+			</h1>
+			<a href="#" class="edit-button btn btn-primary" data-id="{{ venue.id }}" style="margin-left:1rem; margin-right:1rem">
+				EDIT
+			</a>
+			<button role="button" class="delete-button btn btn-danger" data-id="{{ venue.id }}">
+				DELETE
+			</button>
+		</div>
 		<p class="subtitle">
 			ID: {{ venue.id }}
 		</p>
@@ -24,10 +33,12 @@
 			<i class="fas fa-phone-alt"></i> {% if venue.phone %}{{ venue.phone }}{% else %}No Phone{% endif %}
 		</p>
 		<p>
-			<i class="fas fa-link"></i> {% if venue.website %}<a href="{{ venue.website }}" target="_blank">{{ venue.website }}</a>{% else %}No Website{% endif %}
+			<i class="fas fa-link"></i> {% if venue.website %}<a href="{{ venue.website }}"
+				target="_blank">{{ venue.website }}</a>{% else %}No Website{% endif %}
 		</p>
 		<p>
-			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
+			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}"
+				target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
 		</p>
 		{% if venue.seeking_talent %}
 		<div class="seeking">
@@ -36,18 +47,21 @@
 				<i class="fas fa-quote-left"></i> {{ venue.seeking_description }} <i class="fas fa-quote-right"></i>
 			</div>
 		</div>
-		{% else %}	
+		{% else %}
 		<p class="not-seeking">
 			<i class="fas fa-moon"></i> Not currently seeking talent
 		</p>
 		{% endif %}
 	</div>
+
 	<div class="col-sm-6">
 		<img src="{{ venue.image_link }}" alt="Venue Image" />
 	</div>
 </div>
+
 <section>
-	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming
+		{% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
 		{%for show in venue.upcoming_shows %}
 		<div class="col-sm-4">
@@ -60,8 +74,10 @@
 		{% endfor %}
 	</div>
 </section>
+
 <section>
-	<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ venue.past_shows_count }} Past
+		{% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
 		{%for show in venue.past_shows %}
 		<div class="col-sm-4">
@@ -75,5 +91,25 @@
 	</div>
 </section>
 
-{% endblock %}
+<script>
+	const deleteBtn = document.querySelector('.delete-button');
+	deleteBtn.onclick = function (e) {
+		const id = e.target.dataset['id'];
+		fetch('/venues/' + id, {
+			method: 'DELETE'
+		}).then(response => {
+			window.location.href = '/venues';
+		})
+	}
+	const editBtn = document.querySelector('.edit-button');
+	editBtn.onclick = function (e) {
+		const id = e.target.dataset['id'];
+		fetch(`/venues/${id}/edit`, {
+			method: 'GET'
+		}).then(response => {
+        	window.location.href = `/venues/${id}/edit`;
+      })
+	}
+</script>
 
+{% endblock %}
